[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/regions/verdant_valley.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon2.png" type="Texture" id=2]
[ext_resource path="res://scripts/scrollbar.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/icon4.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/icon1.png" type="Texture" id=5]
[ext_resource path="res://ui/separator.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/icon5.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/icon3.png" type="Texture" id=8]
[ext_resource path="res://themes/colors/dark_brown.tres" type="StyleBox" id=10]
[ext_resource path="res://themes/popup.tres" type="StyleBox" id=11]
[ext_resource path="res://themes/button_region.tres" type="Theme" id=12]
[ext_resource path="res://scripts/popup.gd" type="Script" id=13]
[ext_resource path="res://themes/font_header.tres" type="Theme" id=15]
[ext_resource path="res://assets/regions/dangerous_depths.png" type="Texture" id=17]
[ext_resource path="res://assets/regions/fatal_forest.png" type="Texture" id=18]
[ext_resource path="res://assets/regions/wretched_wasteland.png" type="Texture" id=19]
[ext_resource path="res://assets/regions/gory_graveyard.png" type="Texture" id=20]
[ext_resource path="res://assets/regions/satanic_swamp.png" type="Texture" id=21]
[ext_resource path="res://assets/regions/perilous_peaks.png" type="Texture" id=22]
[ext_resource path="res://assets/regions/gruesome_grove.png" type="Texture" id=23]
[ext_resource path="res://assets/regions/menacing_mountain.png" type="Texture" id=24]
[ext_resource path="res://assets/regions/vicious_void.png" type="Texture" id=25]
[ext_resource path="res://themes/button.tres" type="Theme" id=26]
[ext_resource path="res://scripts/screen_map.gd" type="Script" id=27]
[ext_resource path="res://themes/header.tres" type="StyleBox" id=28]

[sub_resource type="Theme" id=17]

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.345098, 0.278431, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0, 0, 0, 0.780392 )

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="parent" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 17 )
custom_constants/separation = 0

[node name="header" type="PanelContainer" parent="parent"]
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 28 )

[node name="lbl_header" type="Label" parent="parent/header"]
margin_left = 4.0
margin_top = 4.0
margin_right = 356.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 15 )
text = "WORLD MAP"
align = 1
valign = 1

[node name="container" type="PanelContainer" parent="parent"]
margin_top = 48.0
margin_right = 360.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 10 )

[node name="screen_map" type="MarginContainer" parent="parent/container"]
margin_right = 360.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 6
custom_constants/margin_bottom = 6
script = ExtResource( 27 )

[node name="parent_vbox" type="VBoxContainer" parent="parent/container/screen_map"]
margin_top = 6.0
margin_right = 360.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="region_vbox" type="VBoxContainer" parent="parent/container/screen_map/parent_vbox"]
margin_left = 40.0
margin_right = 320.0
margin_bottom = 101.0
size_flags_horizontal = 4
custom_constants/separation = 5
alignment = 1

[node name="region_row1" type="HBoxContainer" parent="parent/container/screen_map/parent_vbox/region_vbox"]
margin_right = 280.0
margin_bottom = 48.0
custom_constants/separation = 10
alignment = 1

[node name="valley" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row1"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 1 )
expand_icon = true

[node name="forest" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row1"]
margin_left = 58.0
margin_right = 106.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 18 )
expand_icon = true

[node name="grove" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row1"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 23 )
expand_icon = true

[node name="depths" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row1"]
margin_left = 174.0
margin_right = 222.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 17 )
expand_icon = true

[node name="wasteland" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row1"]
margin_left = 232.0
margin_right = 280.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 19 )
expand_icon = true

[node name="region_row2" type="HBoxContainer" parent="parent/container/screen_map/parent_vbox/region_vbox"]
margin_top = 53.0
margin_right = 280.0
margin_bottom = 101.0
custom_constants/separation = 10
alignment = 1

[node name="graveyard" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row2"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 20 )
expand_icon = true

[node name="swamp" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row2"]
margin_left = 58.0
margin_right = 106.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 21 )
expand_icon = true

[node name="peaks" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row2"]
margin_left = 116.0
margin_right = 164.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 22 )
expand_icon = true

[node name="mountain" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row2"]
margin_left = 174.0
margin_right = 222.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 24 )
expand_icon = true

[node name="void" type="Button" parent="parent/container/screen_map/parent_vbox/region_vbox/region_row2"]
margin_left = 232.0
margin_right = 280.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 12 )
icon = ExtResource( 25 )
expand_icon = true

[node name="sep_bottom" parent="parent/container/screen_map/parent_vbox" instance=ExtResource( 6 )]
margin_top = 107.0
margin_bottom = 111.0

[node name="monsters" type="ScrollContainer" parent="parent/container/screen_map/parent_vbox"]
margin_top = 117.0
margin_right = 360.0
margin_bottom = 500.0
mouse_filter = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 3 )

[node name="vbox" type="VBoxContainer" parent="parent/container/screen_map/parent_vbox/monsters"]
margin_right = 360.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="parent/container"]
visible = false
margin_right = 360.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="pnl_main" type="PanelContainer" parent="parent"]
visible = false
margin_top = 304.0
margin_right = 360.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 29 )

[node name="sep_bottom" parent="parent" instance=ExtResource( 6 )]
margin_top = 560.0
margin_bottom = 564.0

[node name="footer" type="PanelContainer" parent="parent"]
margin_top = 564.0
margin_right = 360.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 76 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 10 )

[node name="buttons" type="HBoxContainer" parent="parent/footer"]
margin_right = 360.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7
alignment = 1

[node name="btn_home" type="Button" parent="parent/footer/buttons"]
margin_left = 6.0
margin_top = 6.0
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 26 )
icon = ExtResource( 5 )
expand_icon = true

[node name="btn_heroes" type="Button" parent="parent/footer/buttons"]
margin_left = 77.0
margin_top = 6.0
margin_right = 141.0
margin_bottom = 70.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 26 )
icon = ExtResource( 2 )
expand_icon = true

[node name="btn_map" type="Button" parent="parent/footer/buttons"]
margin_left = 148.0
margin_top = 6.0
margin_right = 212.0
margin_bottom = 70.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 26 )
icon = ExtResource( 8 )
expand_icon = true

[node name="btn_vendors" type="Button" parent="parent/footer/buttons"]
margin_left = 219.0
margin_top = 6.0
margin_right = 283.0
margin_bottom = 70.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 26 )
icon = ExtResource( 4 )
expand_icon = true

[node name="btn_storage" type="Button" parent="parent/footer/buttons"]
margin_left = 290.0
margin_top = 6.0
margin_right = 354.0
margin_bottom = 70.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 26 )
icon = ExtResource( 7 )
expand_icon = true

[node name="PopupBlackout" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 30 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_bottom = 238.0
rect_min_size = Vector2( 340, 100 )
size_flags_vertical = 3
popup_exclusive = true
script = ExtResource( 13 )

[node name="container" type="PanelContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 11 )

[node name="parent_vbox" type="VBoxContainer" parent="Popup/container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 226.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/container/parent_vbox"]
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Popup/container/parent_vbox/VBoxContainer"]
margin_top = 73.0
margin_right = 320.0
margin_bottom = 107.0
theme = ExtResource( 15 )
text = "Testing 123"
align = 1

[node name="bottom" type="HBoxContainer" parent="Popup/container/parent_vbox"]
margin_top = 184.0
margin_right = 320.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
alignment = 1

[node name="close" type="Button" parent="Popup/container/parent_vbox/bottom"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 32.0
theme = ExtResource( 26 )
text = "CLOSE"

[connection signal="pressed" from="Popup/container/parent_vbox/bottom/close" to="Popup" method="close_popup"]
